--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
 
     <!-- 모달 -->
-    <div id="create-room-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center">
+    <div id="create-room-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center p-4">
         <div class="bg-white p-8 rounded-lg shadow-xl w-full max-w-md space-y-4">
             <h2 class="text-2xl font-bold">새 방 만들기</h2>
             <input type="text" id="nickname-input" placeholder="닉네임" class="w-full px-4 py-3 border rounded-lg" autocomplete="off">
@@ -99,7 +99,7 @@
             </div>
         </div>
     </div>
-    <div id="password-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center">
+    <div id="password-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center p-4">
         <div class="bg-white p-8 rounded-lg shadow-xl w-full max-w-md space-y-4">
             <h2 class="text-2xl font-bold">비밀번호 입력</h2>
             <input type="text" id="join-nickname-input" placeholder="닉네임" class="w-full px-4 py-3 border rounded-lg" autocomplete="off">
